fix(product-card): change product-card and product image spacing and borders

--- a/src/components/product/ProductCard/product-card.scss
+++ b/src/components/product/ProductCard/product-card.scss
@@ -17,8 +17,8 @@
   --fs-product-card-bkg-color-hover          : var(--fs-product-card-bkg-color);
   --fs-product-card-bkg-color-focus          : var(--fs-product-card-bkg-color-hover);
 
-  --fs-product-card-img-radius               : var(--fs-border-radius-default);
-  --fs-product-card-content-padding          : var(--fs-spacing-2) 0 0 0;
+  --fs-product-card-img-radius               : var(--fs-border-radius-default) var(--fs-border-radius-default) 0 0;
+  --fs-product-card-content-padding          : var(--fs-spacing-2) var(--fs-spacing-1) var(--fs-spacing-4);
 
   --fs-product-card-border-radius            : var(--fs-border-radius-default);
   --fs-product-card-border-width             : var(--fs-border-width-default);
@@ -44,10 +44,6 @@
   --fs-product-card-transition-property      : var(--fs-transition-property);
   --fs-product-card-transition-timing        : var(--fs-transition-timing);
 
-  // --------------------------------------------------------
-  // Structural Styles
-  // --------------------------------------------------------
-
   position: relative;
   display: grid;
   grid-template-rows: minmax(0, max-content);
@@ -56,11 +52,21 @@
   max-width: var(--fs-product-card-max-width);
   height: 100%;
   padding: var(--fs-product-card-padding);
+
+  // --------------------------------------------------------
+  // Structural Styles
+  // --------------------------------------------------------
+
+  margin-bottom: 10px;
   background-color: var(--fs-product-card-bkg-color);
   border: var(--fs-product-card-border-width) solid transparent;
   border-radius: var(--fs-product-card-border-radius);
   box-shadow: var(--fs-product-card-shadow);
   transition: var(--fs-product-card-transition-property) var(--fs-product-card-transition-timing) var(--fs-product-card-transition-function);
+
+  @include media(">=tablet") {
+    border-radius: 0.625rem;
+  }
 
   &:focus-within {
     @include focus-ring;
@@ -80,13 +86,20 @@
     position: relative;
     display: flex;
     justify-content: center;
-    width: 156px;
+    width: 100%;
+    max-width: 156px;
     height: 156px;
+    padding: 0;
     overflow: hidden;
     border-radius: var(--fs-product-card-img-radius);
 
+    @include media(">=tablet") {
+      max-width: unset;
+      height: 180px;
+      border-radius: 0.625rem 0.625rem 0 0;
+    }
+
     @include media(">=notebook") {
-      width: 232px;
       height: 202px;
     }
   }
